Fixed footer spacing, fixed bug where nav domain would become active when clicking home domain button

--- a/source/webapp/sites/all/themes/checkbooknyc/css/main.scss
+++ b/source/webapp/sites/all/themes/checkbooknyc/css/main.scss
@@ -27,11 +27,13 @@ html {
 body {
   font-family: "Century Gothic";
   margin: auto;
-  min-height: 100%;
-  padding-bottom: 7rem;
+  min-height: 105%;
+  // padding-bottom: 7rem;
   position: relative;
 }
 body {
   margin: 0;
+  padding-bottom: 7rem;
   padding: 0;
+  position: relative;
 }
