--- a/source/webapp/sites/all/themes/checkbooknyc/css/output.css
+++ b/source/webapp/sites/all/themes/checkbooknyc/css/output.css
@@ -986,12 +986,13 @@ html {
 body {
   font-family: "Century Gothic";
   margin: auto;
-  min-height: 100%;
-  padding-bottom: 7rem;
+  min-height: 105%;
   position: relative; }
 
 body {
   margin: 0;
-  padding: 0; }
+  padding-bottom: 7rem;
+  padding: 0;
+  position: relative; }
 
 /*# sourceMappingURL=output.css.map */
